--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,10 @@ html {
 
 .main-div {
   min-height: 100vh;
-  background: #060822;
+  background-image: url(todobg.png) ;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 100%;
   display: flex;
   justify-content: center;
   /* align-items: center; */
