--- a/src/index.css
+++ b/src/index.css
@@ -33,7 +33,7 @@ html {
 }
 
 .child-div figure figcaption {
-  color: #fff;
+  color: black;
   font-size: 2.2rem;
   padding-top: 2rem;
   text-transform: capitalize;
